--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url "https://appboy.github.io/appboy-android-sdk/sdk" }
-        maven {
-            url "https://nexus.upsight.com/nexus/content/repositories/upsight-android-release/"
-        }
+        maven { url 'https://jitpack.io' }
     }
 }
 
